<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/main_setting_setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_setting_account_manage"
        android:orderInCategory="100"
        android:title="@string/main_setting_account_manage"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_setting_card_manage"
        android:orderInCategory="100"
        android:title="@string/main_setting_card_manage"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_setting_category_manage"
        android:orderInCategory="100"
        android:title="@string/main_setting_category_manage"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_setting_notification_manage"
        android:orderInCategory="100"
        android:title="@string/main_setting_notification_manage"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_setting_current_property_manage"
        android:orderInCategory="100"
        android:title="@string/main_setting_current_property_manage"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_setting_message_manage"
        android:orderInCategory="100"
        android:title="@string/main_setting_message_manage"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_content_to_category"
        android:orderInCategory="100"
        android:title="@string/main_content_to_category"
        app:showAsAction="never" />

</menu>
