<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:text="@string/card_add_card"
                android:gravity="center_vertical|end"
                android:layout_height="@dimen/record_table_row_height"
                android:layout_width="@dimen/record_table_classification_button_width"
                android:paddingLeft="@dimen/record_table_classification_label_side_padding"
                android:paddingRight="@dimen/record_table_classification_label_side_padding"
                android:textSize="@dimen/record_table_classification_label_text_size" />

            <EditText
                android:id="@+id/card_add_name"
                android:inputType="text"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/card_add_account"
                android:gravity="center_vertical|end"
                android:layout_height="@dimen/record_table_row_height"
                android:layout_width="@dimen/record_table_classification_button_width"
                android:paddingLeft="@dimen/record_table_classification_label_side_padding"
                android:paddingRight="@dimen/record_table_classification_label_side_padding"
                android:textSize="@dimen/record_table_classification_label_text_size" />

            <com.noverish.cashbook.account.AccountSelectSpinner
                android:id="@+id/card_add_account_select_spinner"
                android:layout_height="@dimen/record_table_row_height">
            </com.noverish.cashbook.account.AccountSelectSpinner>

        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/card_add_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/add"/>

    <Button
        android:id="@+id/card_add_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/remove"/>

</RelativeLayout>