<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/cashbook_add_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/remove"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/cashbook_add_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/add"
        style="?android:attr/borderlessButtonStyle"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/cashbook_add_save"
        android:layout_toEndOf="@+id/cashbook_add_delete"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cashbook_add_save_without_change_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cashbook_add_save_without_change_balance"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/cashbook_add_delete_without_change_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cashbook_add_delete_without_change_balance"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>



    <ScrollView
        android:layout_above="@id/cashbook_add_save"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.noverish.cashbook.view.DateTimeSelector
                android:id="@+id/cashbook_add_date_time_selector"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/record_table_row_height">

            </com.noverish.cashbook.view.DateTimeSelector>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/cashbook_add_classification"
                    android:textColor="@color/main_color"
                    android:gravity="center_vertical|end"
                    android:layout_height="@dimen/record_table_row_height"
                    android:layout_width="@dimen/record_table_first_column_width"
                    android:paddingLeft="@dimen/record_table_classification_label_side_padding"
                    android:paddingRight="@dimen/record_table_classification_label_side_padding"
                    android:textSize="@dimen/record_table_classification_label_text_size"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cashbook_add_button_expenditure"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/expense"
                        style="?android:attr/borderlessButtonStyle"/>

                    <Button
                        android:id="@+id/cashbook_add_button_income"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/income"
                        style="?android:attr/borderlessButtonStyle"/>

                    <Button
                        android:id="@+id/cashbook_add_button_transfer"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/transfer"
                        style="?android:attr/borderlessButtonStyle"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/cashbook_add_amount"
                    android:textColor="@color/main_color"
                    android:gravity="center_vertical|end"
                    android:layout_height="@dimen/record_table_row_height"
                    android:layout_width="@dimen/record_table_first_column_width"
                    android:paddingLeft="@dimen/record_table_classification_label_side_padding"
                    android:paddingRight="@dimen/record_table_classification_label_side_padding"
                    android:textSize="@dimen/record_table_classification_label_text_size"
                    />

                <EditText
                    android:id="@+id/cashbook_add_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/cashbook_add_usage_content"
                    android:textColor="@color/main_color"
                    android:gravity="center_vertical|end"
                    android:layout_height="@dimen/record_table_row_height"
                    android:layout_width="@dimen/record_table_first_column_width"
                    android:paddingLeft="@dimen/record_table_classification_label_side_padding"
                    android:paddingRight="@dimen/record_table_classification_label_side_padding"
                    android:textSize="@dimen/record_table_classification_label_text_size"
                    />

                <EditText
                    android:id="@+id/cashbook_add_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/cashbook_add_usage_place"
                    android:textColor="@color/main_color"
                    android:gravity="center_vertical|end"
                    android:layout_height="@dimen/record_table_row_height"
                    android:layout_width="@dimen/record_table_first_column_width"
                    android:paddingLeft="@dimen/record_table_classification_label_side_padding"
                    android:paddingRight="@dimen/record_table_classification_label_side_padding"
                    android:textSize="@dimen/record_table_classification_label_text_size"
                    />

                <EditText
                    android:id="@+id/cashbook_add_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/cashbook_add_usage_account"
                    android:textColor="@color/main_color"
                    android:gravity="center_vertical|end"
                    android:layout_height="@dimen/record_table_row_height"
                    android:layout_width="@dimen/record_table_first_column_width"
                    android:paddingLeft="@dimen/record_table_classification_label_side_padding"
                    android:paddingRight="@dimen/record_table_classification_label_side_padding"
                    android:textSize="@dimen/record_table_classification_label_text_size"
                    />

                <com.noverish.cashbook.view.CashCardAccountSelectView
                    android:id="@+id/cashbook_add_account_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </com.noverish.cashbook.view.CashCardAccountSelectView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:text="@string/cashbook_add_category"
                    android:textColor="@color/main_color"
                    android:gravity="center_vertical|end"
                    android:layout_height="@dimen/record_table_row_height"
                    android:layout_width="@dimen/record_table_first_column_width"
                    android:paddingLeft="@dimen/record_table_classification_label_side_padding"
                    android:paddingRight="@dimen/record_table_classification_label_side_padding"
                    android:textSize="@dimen/record_table_classification_label_text_size"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.noverish.cashbook.view.CategorySelectView
                        android:id="@+id/cashbook_add_category_select"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible">

                    </com.noverish.cashbook.view.CategorySelectView>

                    <com.noverish.cashbook.account.AccountSelectSpinner
                        android:id="@+id/cashbook_add_transfer_to_account_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible">

                    </com.noverish.cashbook.account.AccountSelectSpinner>

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/cashbook_add_memo"
                    android:textColor="@color/main_color"
                    android:gravity="center_vertical|end"
                    android:layout_height="@dimen/record_table_row_height"
                    android:layout_width="@dimen/record_table_first_column_width"
                    android:paddingLeft="@dimen/record_table_classification_label_side_padding"
                    android:paddingRight="@dimen/record_table_classification_label_side_padding"
                    android:textSize="@dimen/record_table_classification_label_text_size"
                    />


                <EditText
                    android:id="@+id/cashbook_add_memo"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:minLines="1"
                    android:gravity="top|left"
                    android:maxLines="100"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:scrollbars="vertical"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>





