<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/account_layout_inside"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/cash_card_account_select_border">

        <RelativeLayout
            android:id="@+id/account_layout"
            android:layout_height="@dimen/record_table_row_height"
            android:layout_width="match_parent"
            android:background="@drawable/cash_card_account_select_border">

            <ImageView
                android:layout_width="@dimen/record_table_card_button_width"
                android:layout_height="@dimen/record_table_row_height"
                android:background="@drawable/category003"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/blank"
                style="?android:attr/borderlessButtonStyle" />

            <ImageView
                android:layout_width="@dimen/record_table_account_button_width"
                android:layout_height="@dimen/record_table_row_height"
                android:background="@drawable/category002"
                android:contentDescription="@string/blank"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/account_category001"
                android:layout_width="@dimen/record_table_row_height"
                android:layout_height="@dimen/record_table_row_height"
                android:background="@drawable/category001"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/account_category003"
                android:layout_width="@dimen/record_table_card_button_width_text_part"
                android:layout_height="@dimen/record_table_row_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/account_category002"
                android:layout_width="@dimen/record_table_account_button_width_text_part"
                android:layout_height="@dimen/record_table_row_height"
                android:layout_toRightOf="@id/account_category001"
                android:layout_toEndOf="@id/account_category001"
                android:gravity="center"
                style="?android:attr/borderlessButtonStyle" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_select_layout_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/account_select_layout_card"
                android:id="@+id/account_select_layout_card_select_button"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/account_select_layout_account"
                android:id="@+id/account_select_layout_account_select_button"
                style="?android:attr/borderlessButtonStyle" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/account_select_layout_card_select_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">
            </ListView>

            <ListView
                android:id="@+id/account_select_layout_account_select_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">
            </ListView>
        </FrameLayout>


    </LinearLayout>



</LinearLayout>